<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Real Estate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello world</string>

    <!-- nav drawer -->
    <string name="drawer_open">Slider Menu Open</string>
    <string name="drawer_close">Slider Menu Close</string>
    <string name="drawer_counter">25</string>
    <string name="drawer_title">Homes for Sale</string>

    <!-- nav drawer menu items -->
    <string-array name="nav_drawer_items">
        <item>Homes for Sale</item>
        <item>Homes for Rent</item>
        <item>Commercial properties</item>
    </string-array>

    <!-- nav drawer item icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_pages</item>
    </array>

    <!-- img content desc -->
    <string name="img_content_desc">Image</string>


    <!-- search -->
    <string name="title_activity_search">Search</string>
    <string name="action_search">Search</string>

    <!--search tabs title-->
    <string-array name="search_tabs_title">
        <item>For Sale</item>
        <item>For Rent</item>
        <item>Commercial</item>
    </string-array>

    <!-- commercial list item details-->
    <string name="property_name">Delta Corner</string>
    <string name="property_location">Waiyaki way, Westlands</string>
    <string name="property_size"> 2,500 – 6,000 sqft</string>
    <string name="property_type">Refurbished Office Space</string>

    <!--Home for Rent/Sale list item details-->
    <string name="home_rent_amount">KES 70,000 / mo</string>
    <string name="home_price">KES 7.5 mil</string>
    <string name="home_name">Jasmine Court</string>
    <string name="home_location">Ngong Rd, RaceCourse</string>
    <string name="home_br_ba"> 2 br / 2 ba</string>
    <string name="home_type">Apartment</string>

    <!--default vals-->
    <string name="empty_list">No commercial properties available at the moment.\nPlease try again later</string>
    <string name="share">Share</string>

    <!--homes Activity -->
    <string name="title_activity_home">Homes</string>
    <string name="request_info_btn">Request Info</string>
    <string name="img_counter">1/5</string>
    <string name="location_lbl">Located in</string>
    <string name="direction_lbl">Directions</string>
    <string name="map_lbl">View Map</string>
    <string name="price_lbl">Price</string>
    <string name="rent_lbl">Rent:</string>
    <string name="nearby_lbl">Nearby Amenities</string>
    <string name="nearby_amenities">Schools: 3\nNakumatt Junction Shopping Mall\nLow Crime Rate</string>
    <string name="request_info_lbl">Provided By</string>
    <string name="info_agent_lbl">Realtor:</string>
    <string name="info_agent">Knight Frank</string>
    <string name="info_agent_no_lbl">Phone:</string>
    <string name="info_agent_no">+254 712345678</string>
    <string name="info_agent_email_lbl">Email:</string>
    <string name="info_agent_email">sales@knightfrank.com</string>
    <string name="info_agent_call">Call</string>
    <string name="info_agent_send_email">Email</string>
    <string name="info_agent_email_subject">Apartment 3C, Jasmine Court</string>
    <string name="info_agent_email_compose">Hi, I\'d like to know more about the house at Jasmine Court...</string>
    <string name="home_listing_info">Listing Info</string>
    <string name="home_listing_info_status_lbl">Status:</string>
    <string name="home_listing_info_status">For Sale</string>
    <string name="home_listing_info_beds_lbl">Beds:</string>
    <string name="home_listing_info_beds">3</string>
    <string name="home_listing_info_baths_lbl">Baths:</string>
    <string name="home_listing_info_baths">2</string>
    <string name="home_listing_info_type_lbl">Property Type:</string>
    <string name="home_listing_info_type">Apartment</string>

    <string name="home_desc">
        The living is easy in this impressive, generously proportioned contemporary residence with
        lake and ocean views, located within a level stroll to the sand and surf.The floor plan
        encompasses four spacious bedrooms with plenty of room for study, sleep and storage, three
        luxurious bathrooms, and a sleek and stylish kitchen that flows through to the dining room
        and private rear patio. The master bedroom, complete with walk-in robe and ensuite, ensures
        parents have a private space where they can enjoy the view. Perfect for a family or as a
        holiday retreat, this home is ideally positioned to enjoy the proximity
        to beaches, cafes and restaurants, shopping centre, and a selection of premier schools.
    </string>

    <!--commercial Activity -->
    <string name="title_activity_commercial">Commercial Properties</string>

    <!-- imageSlider activity -->
    <string name="title_activity_imageSlider">View Images</string>

    <!-- search activity-->
    <string name="search_reset_btn">Reset</string>
    <string name="search_submit_btn">Find Homes</string>
    <string name="search_TXT_lbl">Search</string>
    <string name="search_hint_lbl">Ngong Road, Nairobi</string>
    <string name="search_pricerange_lbl">Select a Price Range</string>
    <string name="search_moreoptions_btn">Show more search filters</string>
    <string name="search_hidemoreoptions_btn">Hide search filters</string>
    <string name="search_moreoptions_lbl">More Options</string>
    <string name="search_allproptype_lbl">All Property Types</string>
    <string name="search_pets_lbl">Pets Allowed</string>
    <string-array name="search_beds_arr">
        <item>1 Bedroom</item>
        <item>2 Bedrooms</item>
        <item>3 Bedrooms</item>
        <item>4 Bedrooms</item>
        <item>5+ Bedrooms</item>
    </string-array>
    <string-array name="search_baths_arr">
        <item>1 Bath</item>
        <item>2 Baths</item>
        <item>3 Baths</item>
        <item>4+ Baths</item>
    </string-array>
</resources>
