<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="3dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/list_property_img"
            android:src="@drawable/item_pic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_content_desc"
            android:layout_gravity="center|fill_horizontal" />

        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/property_name"
                android:text="@string/property_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/property_location"
                android:text="@string/property_location"
                android:layout_below="@id/property_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/property_size"
                android:text="@string/property_size"
                android:layout_below="@id/property_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/extras_list_item"/>

            <TextView
                android:id="@+id/property_type"
                android:text="@string/property_type"
                android:layout_below="@id/property_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/extras_list_item"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>