<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_selector">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_gravity="center_vertical"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/img_content_desc"
            android:src="@drawable/ic_home"/>

        <TextView
            android:id="@+id/title"
            android:layout_weight="0.6"
            android:text="@string/drawer_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/list_item_title"
            android:gravity="center_vertical"
            android:paddingRight="40dp"/>

        <TextView android:id="@+id/counter"
            android:text="@string/drawer_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/counter_bg"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:textColor="@color/counter_text_color"/>

    </LinearLayout>





</RelativeLayout>