<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <!-- footer section -->
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/section_search_footer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/search_reset_BTN"
            android:text="@string/search_reset_btn"
            android:textSize="20sp"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/locations_button_style"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <Button
            android:id="@+id/search_submit_BTN"
            android:text="@string/search_submit_btn"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight=".7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button_style"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/section_search_scroll"
        android:layout_alignParentTop="true"
        android:layout_above="@id/section_search_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- default search section -->
            <RelativeLayout
                android:id="@+id/section_search_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/search_TXT_lbl"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <AutoCompleteTextView
                        android:id="@+id/search_txtbx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_hint_lbl"
                        android:drawableLeft="@drawable/search"
                        android:drawablePadding="3dp"/>

                    <TextView
                        android:id="@+id/search_pricerange_lbl"
                        android:text="@string/search_pricerange_lbl"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>

                    <SeekBar
                        android:id="@+id/search_pricerange_seeker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:progress="0"
                        android:max="100"
                        android:progressDrawable="@drawable/seekbar_style"
                        android:secondaryProgress="0"/>

                    <!--baths/beds mini section -->
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/search_baths_spinner"
                            android:entries="@array/search_baths_arr"
                            android:layout_width="0dp"
                            android:layout_weight=".5"
                            android:layout_marginRight="5dp"
                            android:layout_height="wrap_content"/>

                        <Spinner
                            android:id="@+id/search_beds_spinner"
                            android:entries="@array/search_beds_arr"
                            android:layout_weight=".5"
                            android:layout_marginLeft="5dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <!-- extra search section.. hidden -->
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/section_search_extras"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_moreoptions_lbl"
                        android:textSize="22sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".5"
                        android:layout_marginTop="2dp"
                        android:background="@color/list_divider"/>

                    <LinearLayout
                        android:paddingTop="10dp"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_marginTop="5dp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:textSize="15sp"
                                android:text="@string/search_allproptype_lbl"/>

                            <CheckBox
                                android:layout_gravity="center"
                                android:layout_width="0dp"
                                android:layout_weight=".1"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:alpha=".5"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="12dp"
                            android:background="@color/list_divider"/>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_marginTop="5dp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:textSize="15sp"
                                android:text="@string/search_pets_lbl"/>

                            <CheckBox
                                android:layout_gravity="center"
                                android:layout_width="0dp"
                                android:layout_weight=".1"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:alpha=".5"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="12dp"
                            android:background="@color/list_divider"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/search_toggle_BTN"
                android:text="@string/search_moreoptions_btn"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/locations_button_style"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>